Fix line breaks on mobile

--- a/index.css
+++ b/index.css
@@ -272,6 +272,12 @@ select {
   }
 }
 
+@media screen and (max-width: 320px) {
+  .showPrice {
+    font-size: .9em;
+  }
+}
+
 .none {
   display: none;
 }
